# app/Http/Middleware/Authenticate.php
@@ -2,49 +2,20 @@
 
 namespace App\Http\Middleware;
 
-use Closure;
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Auth;
+use Illuminate\Auth\Middleware\Authenticate as Middleware;
 
-class Authenticate
+class Authenticate extends Middleware
 {
     /**
-     * Handle an incoming request.
+     * Get the path the user should be redirected to when they are not authenticated.
      *
      * @param  \Illuminate\Http\Request  $request
-     * @param  \Closure  $next
-     * @param  string[]...$guards
-     * @return mixed
-     *
-     * @throws \Illuminate\Auth\AuthenticationException
+     * @return string|null
      */
-    public function handle(Request $request, Closure $next,...$guards)
+    protected function redirectTo($request)
     {
-        $request->headers->set('Accept', 'application/json');
-        if ($this->authenticate($request, $guards)) {
-            return $next($request);
+        if (! $request->expectsJson()) {
+            return route('errorlogin2');
         }
-
-        return $request->expectsJson()
-               ? response()->json(['message' => 'Unauthorized'], 401)
-                : redirect()->guest(route('login'));
-    }
-
-    /**
-     * Determine if the user is logged in to any of the given guards.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  array  $guards
-     * @return bool
-     */
-    protected function authenticate(Request $request, array $guards)
-    {
-        foreach ($guards as $guard) {
-            if (Auth::guard($guard)->check()) {
-                return true;
-            }
-        }
-
-        return false;
     }
 }
